# skytrax_reviews_extract_load

./: .env.example  .gitignore  ARITCLE.md  CICD-README.md  Dockerfile  Makefile  README.md  docker-compose.override.yml  pyproject.toml  requirements.txt
.astro/: config.yaml
.claude/: CLAUDE.md
.github/workflows/: cicd-pipeline.yml
airflow/dags/: main_dag.py
airflow/tasks/: snowflake_load.py  upload_to_s3.py
astronomer/: Dockerfile  requirements.txt
astronomer/.astro/: config.yaml
astronomer/dags/: main_dag.py
dags/: dag_crawl.py  dag_process.py  dag_snowflake.py  main_dag.py  test_snowflake.conn.py
docs/: ARTICLE.md  ae-tpf-interview-answers.md  airflow.md  cicd.md  integrations.md  local-dev.md  snowflake.md  terraform.md
include/sql/: copy_into.sql  copy_into_bulk.sql  create_stage.sql  create_table.sql  create_table_airlines.sql  create_table_airports.sql  create_table_load_audit.sql  create_table_lounges.sql  create_table_seats.sql  insert_load_audit.sql
include/tasks/: snowflake_load.py
scripts/: migrate_to_typed_layout.py  pre-commit  setup-cicd.sh
terraform/: .terraform.lock.hcl  iam_airflow.tf  main.tf  outputs.tf  snowflake.tf  terraform.tfvars.example  variables.tf
terraform/aws/: iam_airflow.tf  iam_analyst.tf  iam_analyst.tf.disabled  iam_snowflake.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/snowflake/: loader_role.tf  main.tf  masking.tf  outputs.tf  snowflake.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
tests/common/: test_alerts.py  test_paths.py  test_quality.py
tests/dags/: test_dag_integrity.py  test_dag_process.py
tests/extract/: test_scraper.py
tests/load/: test_s3_upload.py  test_snowflake_load.py
(+20 files in other folders)
