[project]
name = "skytrax-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "requests",
    "beautifulsoup4",
    "boto3==1.35.0",
    "snowflake-connector-python",
    "Unidecode",
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
]

[tool.uv]
package = false   # scripts-only project — uv installs deps but doesn't build/install this repo itself

[tool.setuptools.packages.find]
include = ["include*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]  # E203: whitespace before ':' — conflicts with Black slice formatting
